basic UI of search results of 'cool'

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>CSE186 Assignment 8</title>
+    <title>SpotifyTags</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
