fixed search bar moving

--- a/examples/exampleUI.html
+++ b/examples/exampleUI.html
@@ -7,21 +7,23 @@
 </head>
 <body>
     <div>
-        <div id="top-bar">
-            <div id="button-container">
-                <button>Play</button>
-            </div>
-            <div id="expression-container">
-                <div id="expression">
-                    Expression
+        <div id="top-half">
+            <div id="top-bar">
+                <div id="button-container">
+                    <button>Play</button>
+                </div>
+                <div id="expression-container">
+                    <div id="expression">
+                        Expression
+                    </div>
+                </div>
+                <div>
+                    <!-- put this here to put the expression in the center -->
                 </div>
             </div>
-            <div>
-                <!-- put this here to put the expression in the center -->
+            <div id="search-bar">
+                <input id="search" type="text">
             </div>
-        </div>
-        <div id="search-bar">
-            <input id="search" type="text">
         </div>
         <div id="song-library">
             <table>
@@ -138,6 +140,27 @@
                     <td class="tagCol">song tags</td>
                 </tr>
                 <tr id="song17">
+                    <td class="imgCol">img</td>
+                    <td class="nameCol">song name</td>
+                    <td class="artistCol">song artist</td>
+                    <td class="albumCol">song album</td>
+                    <td class="tagCol">song tags</td>
+                </tr>
+                <tr id="song18">
+                    <td class="imgCol">img</td>
+                    <td class="nameCol">song name</td>
+                    <td class="artistCol">song artist</td>
+                    <td class="albumCol">song album</td>
+                    <td class="tagCol">song tags</td>
+                </tr>
+                <tr id="song19">
+                    <td class="imgCol">img</td>
+                    <td class="nameCol">song name</td>
+                    <td class="artistCol">song artist</td>
+                    <td class="albumCol">song album</td>
+                    <td class="tagCol">song tags</td>
+                </tr>
+                <tr id="song20">
                     <td class="imgCol">img</td>
                     <td class="nameCol">song name</td>
                     <td class="artistCol">song artist</td>
